--- a/P3Ide/MainIdeWindow.xaml
+++ b/P3Ide/MainIdeWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="P3Ide.MainWindow"
+﻿<Window x:Class="P3Ide.MainIdeWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,6 +7,7 @@
         xmlns:dock="http://schemas.xceed.com/wpf/xaml/avalondock"        
         xmlns:dockctrl="clr-namespace:Xceed.Wpf.AvalonDock.Controls;assembly=Xceed.Wpf.AvalonDock"
         xmlns:vm="clr-namespace:P3Ide.ViewModel"
+        xmlns:vmb="clr-namespace:P3Ide.ViewModel.Base"
         xmlns:v="clr-namespace:P3Ide.View"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
@@ -20,13 +21,23 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <Menu Grid.Row="0" Grid.Column="0" DataContext="{Binding MenuViewModel}" ItemsSource="{Binding MenuItems}">
-            <Menu.Resources>
-                <HierarchicalDataTemplate DataType="{x:Type vm:MenuViewModel}" ItemsSource="{Binding MenuItems}">
-                    <ContentPresenter Content="{Binding Text}"/>
+        <Menu Grid.Row="0" Grid.Column="0" DataContext="{Binding Path=MainMenu}" ItemsSource="{Binding Path=MenuItems}">
+            <!--
+            <Style TargetType="MenuItem">
+                <Setter Property="Command" Value="{Binding Commmand}"/>
+            </Style>
+            -->
+            <Menu.ItemTemplate>
+                <HierarchicalDataTemplate DataType="{x:Type vmb:IMenuViewModel}" ItemsSource="{Binding MenuItems}">
+                    <MenuItem Command="{Binding Command}">
+                        <ttexzb
+                    </MenuItem>
                 </HierarchicalDataTemplate>
-            </Menu.Resources>
+
+            </Menu.ItemTemplate>
         </Menu>
+
+        <!--
 
         <dock:DockingManager Grid.Row="1" Grid.Column="0"
                              DataContext="{Binding DockManagerViewModel}"
@@ -52,6 +63,7 @@
             </dock:LayoutRoot>
         </dock:DockingManager>
 
+        -->
 
     </Grid>
 </Window>
