--- a/P3Ide/MainIdeWindow.xaml
+++ b/P3Ide/MainIdeWindow.xaml
@@ -6,8 +6,8 @@
         xmlns:local="clr-namespace:P3Ide"
         xmlns:dock="http://schemas.xceed.com/wpf/xaml/avalondock"        
         xmlns:dockctrl="clr-namespace:Xceed.Wpf.AvalonDock.Controls;assembly=Xceed.Wpf.AvalonDock"
-        xmlns:vm="clr-namespace:P3Ide.ViewModel"
         xmlns:vmb="clr-namespace:P3Ide.ViewModel.Base"
+        xmlns:vmm="clr-namespace:P3Ide.ViewModel.MainWindow"
         xmlns:v="clr-namespace:P3Ide.View"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
@@ -30,16 +30,15 @@
             </Menu.Resources>
         </Menu>
 
-        <!--
-
         <dock:DockingManager Grid.Row="1" Grid.Column="0"
-                             DataContext="{Binding DockManagerViewModel}"
-                             DocumentsSource="{Binding Documents}"
-                             AnchorablesSource="{Binding Anchorables}">
+                             DataContext="{Binding Workspace}"
+                             DocumentsSource="{Binding Documents}">
+
+            <!--                 AnchorablesSource="{Binding Anchorables}"-->
 
             <dock:DockingManager.Resources>
-                <DataTemplate DataType="{x:Type vm:DockWindowViewModel}">
-                    <v:SampleView />
+                <DataTemplate DataType="{x:Type vmm:TextEditorViewModel}">
+                    <v:TextEditorWindow/>
                 </DataTemplate>
             </dock:DockingManager.Resources>
 
@@ -55,8 +54,6 @@
                 </dock:LayoutRoot.LeftSide>
             </dock:LayoutRoot>
         </dock:DockingManager>
-
-        -->
 
     </Grid>
 </Window>
