--- a/P3Ide/View/TextEditorWindow.xaml
+++ b/P3Ide/View/TextEditorWindow.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="P3Ide.View.SampleView"
+﻿<UserControl x:Class="P3Ide.View.TextEditorWindow"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,8 @@
              xmlns:local="clr-namespace:P3Ide.View"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-            
-    </Grid>
+    <StackPanel Orientation="Horizontal">
+        <TextBlock Text="Aha! Test Test" Foreground="White" Background="Red"/>
+
+    </StackPanel>
 </UserControl>
