--- a/P3Ide/View/PascalEditorWindow.xaml
+++ b/P3Ide/View/PascalEditorWindow.xaml
@@ -15,7 +15,8 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <TextBox FontFamily="Hack" FontSize="14" Foreground="LightGreen" Background="Black"
-                 AcceptsReturn="True" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
+                 AcceptsReturn="True" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto"
+                 Text="{Binding Content}">
 
         </TextBox>
     </Grid>
